Fix text-align for language list
Because of CSSJanus (I assume), the language list would be flipped
for RTL languages, so that RTL languages in the list would get
text-align:left; and LTR languages would get text-align:right;.
This should fix that (but not tested, so please do test).

Bug: T319086

--- a/resources/mobile.languages.structured/LanguageSearcher.less
+++ b/resources/mobile.languages.structured/LanguageSearcher.less
@@ -33,7 +33,13 @@
 			padding: 0;
 		}
 
+		[ dir='ltr' ] {
+			/* @noflip */
+			text-align: left;
+		}
+
 		[ dir='rtl' ] {
+			/* @noflip */
 			text-align: right;
 		}
 
